# stann-example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
hw_src/: Makefile  constants.h  profile.ini  stann_examples.cpp  stann_examples.hpp  tennet_weights.h
hw_src/testbench/: testbench.cpp  testbench.tcl
sw_src/: LeNet_inputs.hpp  lenet_weights.hpp  stann_inference.cpp
sw_src/xilinx_helpers/: xilinx_ocl_helper.cpp  xilinx_ocl_helper.hpp
